# doom.wasm

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dev_requirements.txt  doom.wasm.interface.txt  doom_wasm.c  doom_wasm.h  global_constants.wat  internal__wasi-snapshot-preview1.c
.dev_virtualenvs/: python_dev_requirements.txt
doomgeneric/: README.md  doomgeneric.h
examples/native/: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt  python_dev_requirements.txt
examples/native/src/: doom_exports.h  doom_imports.c  doom_imports.h  doom_utils.h  main.c  user_input.c  user_input.h  wrapped_func.c  wrapped_func.h
examples/native/src/exports_via_wasmtime/: doom_exports.c  wrapped_func.c  wrapped_func.h
examples/native/src/imports_via_SDL/: doom_imports.c
include/: d_event.h  d_iwad.h  d_loop.h  d_main.h  d_mode.h  d_player.h  deh_misc.h  doomdef.h  doomstat.h  doomtype.h  g_game.h  hu_stuff.h  i_sound.h  i_swap.h  m_misc.h  memio.h  net_io.h  r_things.h  sha1.h  tables.h  v_patch.h  v_video.h  w_merge.h  z_zone.h
src/: am_map.c  d_event.c  d_items.c  d_iwad.c  d_loop.c  d_main.c  d_mode.c  d_net.c  doom_wasm.c  doom_wasm.h  doomstat.c  dstrings.c  f_finale.c  f_wipe.c  g_game.c  hu_lib.c  hu_stuff.c  i_cdmus.c  i_endoom.c  i_input.c  i_joystick.c  i_scale.c  i_sdlmusic.c  i_sound.c  i_system.c  i_timer.c  i_video.c  info.c  internal__wasi-snapshot-preview1.c  m_argv.c  m_bbox.c  m_cheat.c  m_config.c  m_controls.c  m_fixed.c  m_menu.c  m_misc.c  memio.c  merge-two-initialization-functions-into-one.wat  p_doors.c  (+38 more)
target_SDL/: .gitignore  Makefile  doomgeneric_sdl.c  i_sdlmusic.c  i_sdlsound.c  mus2mid.c
utils/: generate_code_for_embedded_file.py  (+1 more)
(+89 files in other folders)
